Fix background color on mobile

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -164,7 +164,13 @@
 .body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
   color: var(--color-text);
-  background: var(--color-bg-surface);
+  background: var(--color-bg);
+}
+
+@media (--tablet-portrait-up) {
+  .body {
+    background: var(--color-bg-surface);
+  }
 }
